feat: xay dung module thu hoach
